# pgpq

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: python-json.yaml  python.yaml
core/: Cargo.toml
core/src/: encoders.rs  lib.rs  pg_schema.rs
core/tests/: generate_test_data.py  integration_tests.rs
core/tests/snapshots_csv/: list_nullable_uint64.csv  list_nullable_uint64_nullable.csv  list_uint64.csv  list_uint64_nullable.csv  nested_struct.csv  struct_with_two_primitive_cols.csv  uint64.csv  uint64_nullable.csv
core/tests/testdata/: list_nullable_uint64.arrow  list_nullable_uint64_nullable.arrow  list_uint64.arrow  list_uint64_nullable.arrow  uint64.arrow  uint64_nullable.arrow
json/: Cargo.toml
py/: Cargo.toml  pyproject.toml
py/python/pgpq/: _pgpq.pyi  encoders.py
py/src/: encoders.rs  lib.rs  pg_schema.rs  template.py
py/test_pgpq/: test_pgpq.py  test_struct.py
