[package]
name = "_arrow_json"
version = "0.11.1"
edition = "2021"
readme = "README.md"
license = "MIT"

[lib]
name = "_arrow_json"
crate-type = ["cdylib"]

[dependencies]
arrow = {workspace = true, features = ["pyarrow", "json"] }
arrow-json.workspace = true
serde = "1.0.158"
serde_json = "1.0.94"

[dependencies.pyo3]
version = "^0.25.1"
features = ["extension-module", "abi3-py39", "py-clone"]

[package.metadata.maturin]
name = "arrow_json._arrow_json"
